# SolarEclipseWorkbench

./: .gitignore  BURST_SPEED_CONTEXT.md  BURST_SPEED_FINAL_REPORT.md  CHANGELOG.md  PICO_TRIGGER_DESIGN.md  README.md  pyproject.toml  run.sh  test_burst_speed.py  test_camera.py  test_optimized_burst.py  test_releaseex_burst.py
fujixsdk/: __init__.py  _constants.py  _errors.py  _library.py  _structures.py  camera.py  eclipse.py  pyproject.toml
scripts/: print_fnumber_choices.py  sync_uv_lock_to_pyproject.py
src/solareclipseworkbench/: __init__.py  __main__.py  besselian_element_generator.py  camera.py  commands.py  exposure_calculator.py  fuji_adapter.py  fuji_camera.py  gui.py  location_ui.py  notifications.py  nutation.py  observer.py  qt_utils.py  reference_moments.py  scripts.py  sew.py  solar_eclipse.py  usb_gps.py  utils.py  vec.py  wizard.py
src/solareclipseworkbench/camera/: __init__.py  adapters.py  capture.py  discovery.py  fuji_adapter.py  gphoto.py  info.py  types.py  virtual.py
src/solareclipseworkbench/camera/canon/: __init__.py  gphoto.py
src/solareclipseworkbench/camera/fuji/: __init__.py  sdk.py
src/solareclipseworkbench/camera/nikon/: __init__.py  gphoto.py
src/solareclipseworkbench/eclipse/: __init__.py  besselian_element_generator.py  exposure_calculator.py  reference_moments.py  solar_eclipse.py
src/solareclipseworkbench/scheduling/: __init__.py  engine.py  sync.py
src/solareclipseworkbench/ui/: __init__.py  app.py  controller.py  helpers.py  liveview.py  location_ui.py  model.py  popups.py  qt_utils.py  tables.py  view.py  wizard.py
tests/: test_live_view_preview_types.py  test_sony_burst.py  test_sony_save_destination.py  test_sony_storageinfo.py
