[project]
name = "solareclipseworkbench"
version = "1.10.4"

description = "Tools to photograph solar eclipses"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Sara Regibo", email = "sararegibo@gmail.com" },
    { name = "Wim De Meester", email = "deepskywim@gmail.com" },
]
keywords = ["astronomy", "photography", "solar eclipse"]
requires-python = ">=3.11"
dependencies = [
    "astropy==8.0.0",
    "geopandas==1.1.3",
    "matplotlib==3.11.0",
    "gphoto2==2.6.4",
    "apscheduler==3.11.2",
    "geodatasets==2026.5.1",
    "jplephem==2.24",
    "skyfield==1.54",
    "skyfield-data==7.0.0",
    "timezonefinder==8.2.4",
    "playsound3==3.3.1",
    "pyqt6==6.11.0",
    "pytz==2026.2",
    "pyserial==3.5",
    "pynmea2==1.19.0",
    "geopy==2.4.1",
    "requests==2.34.2",
]

[project.urls]
Repository = "https://github.com/AstroWimSara/SolarEclipseWorkbench"

[project.scripts]
sew = "solareclipseworkbench.gui:main"
sew_wizard = "solareclipseworkbench.wizard:main"

[dependency-groups]
dev = ["pytest>=9"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"solareclipseworkbench" = [
    "sound/**",
    "example_scripts/**",
    "img/**",
    "*.bsp",
    "*.csv",
]

