[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fujixsdk"
version = "0.1.0"
description = "Python ctypes bindings for the Fujifilm X Series Shooting SDK"
requires-python = ">=3.9"
license = "MIT"

[tool.setuptools]
packages = ["fujixsdk"]

[tool.setuptools.package-dir]
fujixsdk = "."

[project.optional-dependencies]
dev = ["pytest"]
